syntax = "proto3";

package dynamopb;

option go_package = "github.com/matt-potter/protoc-gen-go-dynamodb/dynamopb";

import "google/protobuf/descriptor.proto";

extend google.protobuf.MessageOptions {
  string table_name = 50001;
  bool storable = 50002;
  pk primary_index = 50003;
  repeated gsi global_secondary_indexes = 50004;
}

message pk {
  key_definition partition_key = 1;
  key_definition sort_key = 2;
}

message gsi {
  string index_name = 1;
  key_definition partition_key = 2;
  key_definition sort_key = 3;
}

message key_definition {

  enum attribute_type {
    BINARY = 0;
    STRING = 1;
    NUMBER = 2;
  }

  string name = 1;
  attribute_type type = 2;
}